_sass/new-styles/modules/footer/_contact.scss
.footer-contact {
  padding: 0 20px;

  &__company {
    position: relative;

    &-name {
      width: 100%;
      font-size: 16px;
      line-height: 24px;
      color: $color-page-text;
    }

    .clutch-widget {
      position: absolute;
      top: -10px;
      right: -130px;
      transform: scale(0.6);
    }
  }

  &__phone-item, &__mail-item {
    font-size: 16px;
    line-height: 32px;

    &__title, a {
      color: $color-page-text;
    }

    &__title {
      opacity: .3;
    }

    a {
      transition: color .2s;
      
      &:hover {
        color: $color-secondary;
      }
    }
  }

  &__phone {
    padding: 25px 0;

    &-item__title {
      display: inline-block;
      min-width: 45px;
    }
  }

  &__social {
    margin: 30px 0;

    .btn-white, &-icons {
      justify-content: space-between;
      max-width: 240px;
    }

    .btn-white {
      width: 100%;
      margin: 0;
      padding: 15px 0;

      &:hover {
        transform: none;
        box-shadow: none;
      }
    }

    &-icons {
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      margin-top: 10px;

      &__item {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 32px;
        height: 32px;
        background-color: $color-secondary;
        border-radius: 100%;
        transition: transform .4s, background-color .4s;

        svg {
          width: 20px;
          height: 20px;
        }

        .fill {
          fill: white;
          transition: fill .4s;
        }

        &:hover {
          transform: scale(1.5);
          background-color: $color-white;

          .fill {
            fill: $color-secondary;
          }
        }
      }
    }
  }
}

@media (min-width: 576px) {
  .footer-contact__company .clutch-widget {
    top: 0;
    right: -110px;
    transform: none;
  }
}

@media (min-width: 811px) {
  .footer-contact {
    display: flex;
    flex-flow: row nowrap;
    max-width: 1280px;
    margin: 0 auto 50px;

    &__company, &__phone, &__mail, &__social {
      box-sizing: border-box;
      width: 25%;
    }

    &__company {
      display: block;

      .clutch-widget {
        position: relative;
        top: 25px;
        left: -20px;
        right: auto;
        transform: scale(0.8);
      }
    }

    &__phone {
      padding: 0;
    }

    &__social {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      position: relative;
      top: -5px;
      margin: 0;

      .btn-white, &-icons {
        width: 210px;
        max-width: 210px;
      }
    }
  }
}

@media (min-width: 1200px) {
  .footer-contact__company .clutch-widget {
    left: -30px;
  }
}

@media (min-width: 1400px) {
  .footer-contact__social .btn-white {
    svg {
      transition: transform .2s ease;
    }

    &:hover svg {
      transform: translateX(35px);
    }
  }
}

